Order store refactoring